--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Clash Display Variable';
-    src: url("../Fonts/ClashDisplay-Variable.woff") format('woff');
+    src: url("../Fonts/ClashDisplay-Variable.ttf") format('ttf');
 }
 
 * {
