--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,8 @@
 @font-face {
-    font-family: 'Clash Display Variable';
-    src: url("../Fonts/ClashDisplay-Variable.ttf") format('ttf');
+    font-family: 'ClashDisplay-Variable';
+    src: url('../Fonts/ClashDisplay-Variable.woff2') format('woff2'),
+         url('../Fonts/ClashDisplay-Variable.woff') format('woff'),
+         url('../Fonts/ClashDisplay-Variable.ttf') format('truetype');
 }
 
 * {
@@ -33,7 +35,7 @@ html {
 body {
     background-color: #FFFDF8;
     color: #101010;
-    font-family: Clash Display Variable, Tenor Sans, sans-serif;
+    font-family: ClashDisplay-Variable, Tenor Sans, sans-serif;
     font-weight: 400;
 }
 
@@ -119,7 +121,7 @@ img {
     color: #fff;
     font-size: 1.5vw;
     text-transform: uppercase;
-    font-family: Clash Display Variable, Tenor Sans, sans-serif;
+    font-family: ClashDisplay-Variable, Tenor Sans, sans-serif;
 }
 
 .main__button-wrapper:hover,
