--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @font-face {
-    font-family: 'Clash Display Variable';
-    src: url("../Fonts/ClashDisplay-Variable.ttf") format('ttf');
+    font-family: 'ClashDisplay-Variable';
+    src: url('../Fonts/ClashDisplay-Variable.woff2') format('woff2'),
+         url('../Fonts/ClashDisplay-Variable.woff') format('woff'),
+         url('../Fonts/ClashDisplay-Variable.ttf') format('truetype');
 }
 
 * {
@@ -33,7 +35,7 @@ html {
 body {
     background-color: #FFFDF8;
     color: #101010;
-    font-family: Clash Display Variable, Tenor Sans, sans-serif;
+    font-family: ClashDisplay-Variable, Tenor Sans, sans-serif;
 }
 
 a {
@@ -245,7 +247,7 @@ img {
     color: #fff;
     font-size: 1.5vw;
     text-transform: uppercase;
-    font-family: Clash Display Variable, Tenor Sans, sans-serif;
+    font-family: ClashDisplay-Variable, Tenor Sans, sans-serif;
 }
 
 .services {
@@ -358,7 +360,7 @@ h2>span {
 .work__title {
     font-weight: 500;
     font-size: clamp(24px, 2.6vw, 145px);
-    font-family: Clash Display Variable, Tenor Sans, sans-serif;
+    font-family: ClashDisplay-Variable, Tenor Sans, sans-serif;
 }
 
 .work__description {
